--- a/form.html
+++ b/form.html
@@ -11,10 +11,10 @@
         <script>
             $(function(){
                $.ajax({
-                 url:"http://localhost:8082/articles",
+                 url:"http://localhost:8082/products",
                }).done(function(data){
                 data.forEach(product => {
-                    $('#articles').append('<li>'+product.name+','+product._id+'</li>')
+                    $('#products').append('<li>'+product.name+','+product._id+'</li>')
                 });
                 
                });
@@ -26,7 +26,7 @@
                     url:"http://localhost:8082/articles",
                     data: $(document.forms[0]).serialize(),
                     success: function(data){
-                        $('#articles').append('<li>'+data.name+','+data._id+'</li>') 
+                        $('#products').append('<li>'+data.name+','+data._id+'</li>') 
                     }
                 })
                
