add home page products search, product page, and start working on shopping cart

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,74 @@
 <body>
 <section id="header"></section>
 <section id="page-content">
-    Home page
+    <div class="hidden">
+        <div class="col" id="productExample">
+            <div class="card productCard">
+                <img src="" class="card-img-top prodImg" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title h4 prodTitle"></h5>
+                    <p class="card-text prodDesc"></p>
+                    <p class="card-text h5">Price: <span class="prodPrice"></span>$</p>
+                    <button class="btn btn-primary">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" class="bi bi-cart3 cartInBuyBtn" viewBox="0 0 16 16">
+                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                        </svg>
+                        Add to cart
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container my-4">
+        <form id="searchForm">
+        <div class="row my-4 searchForm">
+            <div class="form-group col-12 col-md-5 col-lg-4">
+                <label for="searchText" class="">Search text</label>
+                <input type="text" class="form-control" id="searchText" aria-describedby="search" placeholder="">
+            </div>
+            <div class="form-group col-12 col-md-3 col-lg-2">
+                <label for="searchCategory">Category</label>
+                <select class="form-control" id="searchCategory">
+                    <option value="none" selected></option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
+            </div>
+            <div class="form-group col-12 col-md-3 col-lg-2">
+                <label for="searchSupplier">Supplier</label>
+                <select class="form-control" id="searchSupplier">
+                    <option value="none" selected></option>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
+            </div>
+            <div class="form-group col-12 col-md-5 col-lg-3">
+                <label for="searchMinPrice">Price range</label>
+                <label for="searchMaxPrice" class="hidden"></label>
+                <div class="row">
+                    <div class="col-5">
+                        <input type="number" class="searchPriceRange form-control" id="searchMinPrice" aria-describedby="search" placeholder="">
+                    </div>
+                    -
+                    <div class="col-5">
+                        <input type="number" class="searchPriceRange form-control" id="searchMaxPrice" aria-describedby="search" placeholder="">
+                    </div>
+                </div>
+            </div>
+            <div class="form-group col-12 col-md-1">
+                <label class="placeholderLabel">&#8205;</label>
+                <button type="submit" class="btn btn-primary">Search</button>
+            </div>
+        </div>
+        </form>
+        <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3" id="productsRow"></div>
+    </div>
 </section>
 <section id="footer"></section>
 </body>
