--- a/public/cart/index.html
+++ b/public/cart/index.html
@@ -11,8 +11,34 @@
 <body>
 <section id="header"></section>
 <section id="page-content">
+    <div class="row prodCartRow" id="exampleRow">
+        <div class="col-2 col-lg-1 prodImgCol">
+            <img src="" class="prodImg" alt="...">
+        </div>
+        <div class="col-8 col-lg-9">
+            <div class="prodTitle h4 mt-2"></div>
+            <p class="h6">Price: <span class="prodPrice"></span>$</p>
+        </div>
+        <div class="col-2 removeBtnCol">
+            <button class="removeBtn btn btn-outline-danger">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                    <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+                </svg>
+            </button>
+        </div>
+    </div>
     <div class="container my-4">
-        <div id="cartText"></div>
+        <div id="emptyCart" class="hidden">
+            <h2 class="mb-4">Shopping cart is empty</h2>
+        </div>
+        <div id="fullCart" class="hidden">
+            <h2 class="mb-4">Shopping Cart</h2>
+            <div id="cartContainer"></div>
+            <div class="checkoutDiv">
+                <p class="h4">Total: <span id="totalPrice"></span>$</p>
+                <button class="btn btn-primary">Checkout</button>
+            </div>
+        </div>
     </div>
 </section>
 <section id="footer"></section>
