--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
                     <option>2</option>
                     <option>3</option>
                     <option>4</option>
-                    <option>5</option>
+                    <option>nice shoes LTD</option>
                 </select>
             </div>
             <div class="form-group col-12 col-md-5 col-lg-3">
