add footer header

--- a/public/adminInventory/index.html
+++ b/public/adminInventory/index.html
@@ -6,9 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Inventory Management</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="/layout/layout.js"></script>
+
 </head>
 
 <body>
+  <section id="header"></section>
   <h1>Admin Inventory Management</h1>
 
   <h2>Product Management</h2>
@@ -42,6 +45,8 @@
   </div>
 
   <script src="index.js"></script>
+  <section id="footer"></section>
+
 </body>
 
 </html>
