--- a/public/admingraphs/adminGraph.html
+++ b/public/admingraphs/adminGraph.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="/layout/layout.js"></script>
   <script src="node_modules/js3.d/js3d.min.js"></script>
   
   <title>Admin Graphs</title>
 </head>
 
 <body>
+  <section id="header"></section>
   <h1>Admin Graphs</h1>
 
   <div id="error-container"></div>
@@ -25,8 +28,8 @@
     <div id="graph2"></div>
   </div>
 
-
   <script src="adminGraph.js"></script>
+  <section id="footer"></section>
 </body>
 
 </html>
