--- a/public/thanksForPurchase/index.html
+++ b/public/thanksForPurchase/index.html
@@ -4,10 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="/layout/layout.js"></script>
   <title>Thanks for Purchasing</title>
+
 </head>
 
 <body>
+  <section id="header"></section>
+
   <h1>Thanks for Purchasing!</h1>
 
 
@@ -15,6 +19,7 @@
 
 
   <script src="index.js"></script>
+  <section id="footer"></section>
 </body>
 
 </html>
