Inputs are tested + database is set. Remaining - prevent wrong GET from crashing

--- a/public/product/index.html
+++ b/public/product/index.html
@@ -20,7 +20,7 @@
             <div class="col-12 col-md-6">
                 <div class="prodAttr">
                     <b>Category:</b> <span class="prodCategory"></span> <br />
-                    <b>Supplier:</b> <span class="prodSupplier"></span>
+                    <!--<b>Supplier:</b> <span class="prodSupplier"></span>-->
                 </div>
                 <p class="prodDesc"></p>
                 <div class="prodPriceAndBuy">
