--- a/public/adminInventory/index.html
+++ b/public/adminInventory/index.html
@@ -4,49 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Inventory Management</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="/layout/layout.js"></script>
-
+  <title>Admin Inventory Management</title>
 </head>
 
 <body>
-  <section id="header"></section>
   <h1>Admin Inventory Management</h1>
 
-  <h2>Product Management</h2>
-  <form id="create-product-form">
-    <label for="product-name">Name:</label>
-    <input type="text" id="product-name" required>
-    <button type="submit">Create Product</button>
-  </form>
+  <h2>Products</h2>
+  <div id="products-container"></div>
 
-  <div id="product-list">
-  </div>
+  <h2>Suppliers</h2>
+  <div id="suppliers-container"></div>
 
-  <h2>Supplier Management</h2>
-  <form id="create-supplier-form">
-    <label for="supplier-name">Name:</label>
-    <input type="text" id="supplier-name" required>
-    <button type="submit">Create Supplier</button>
-  </form>
+  <h2>Branches</h2>
+  <div id="branches-container"></div>
 
-  <div id="supplier-list">
-  </div>
-
-  <h2>Branch Management</h2>
-  <form id="create-branch-form">
-    <label for="branch-name">Name:</label>
-    <input type="text" id="branch-name" required>
-    <button type="submit">Create Branch</button>
-  </form>
-
-  <div id="branch-list">
-  </div>
-
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="index.js"></script>
-  <section id="footer"></section>
-
 </body>
 
 </html>
