--- a/public/adminInventory/index.html
+++ b/public/adminInventory/index.html
@@ -5,10 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <script src="/layout/layout.js"></script>
   <title>Admin Inventory Management</title>
 </head>
 
 <body>
+  <section id="header"></section>
+
   <h1>Admin Inventory Management</h1>
 
   <h2>Products</h2>
@@ -22,6 +25,8 @@
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="index.js"></script>
+  <section id="footer"></section>
+
 </body>
 
 </html>
