Add search by brand and fix image layout in home screen

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
         <div class="col" id="productExample">
             <div class="card productCard">
                 <div class="prodImgContainer">
-                    <img src="" class="card-img-top prodImg" alt="...">
+                    <div class="innerImgContainer">
+                        <img src="" class="card-img-top prodImg" alt="...">
+                    </div>
                 </div>
                 <div class="card-body">
                     <h5 class="card-title h4 prodTitle"></h5>
@@ -43,22 +45,19 @@
                 <label for="searchCategory">Category</label>
                 <select class="form-control" id="searchCategory">
                     <option value="none" selected></option>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                    <option>Football</option>
+                    <option>Basketball</option>
+                    <option>Running</option>
+                    <option value="tennis">Tennis</option>
                 </select>
             </div>
             <div class="form-group col-12 col-md-3 col-lg-2">
-                <label for="searchSupplier">Supplier</label>
-                <select class="form-control" id="searchSupplier">
+                <label for="searchBrand">Brand</label>
+                <select class="form-control" id="searchBrand">
                     <option value="none" selected></option>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>nice shoes LTD</option>
+                    <option>Adidas</option>
+                    <option>Reebok</option>
+                    <option>Nike</option>
                 </select>
             </div>
             <div class="form-group col-12 col-md-5 col-lg-3">
