--- a/public/adminInventory/index.html
+++ b/public/adminInventory/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="/layout/layout.js"></script>
   <title>Admin Inventory Management</title>
 </head>
@@ -20,7 +21,6 @@
   <h2>Branches</h2>
   <div id="branches-container"></div>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="index.js"></script>
   <section id="footer"></section>
 
