Add facebook page integration

--- a/public/checkout/index.html
+++ b/public/checkout/index.html
@@ -13,7 +13,10 @@
 <section id="page-content">
     <div class="container checkout-container">
         <div id="checkoutMessage" class="hidden h4 my-4">
-            Thank you for purchasing
+            Thank you for purchasing!
+            <p>
+                You can go check our <a href="https://www.facebook.com/profile.php?id=100094643028859">facebook page</a>
+            </p>
         </div>
         <form id="checkoutForm" >
             <div class="mb-3">
