--- a/public/checkout/index.html
+++ b/public/checkout/index.html
@@ -39,8 +39,7 @@
                 <label for="cvvNumber" class="form-label">CVV</label>
                 <input type="text" class="form-control" id="cvvNumber" maxlength="3" required>
             </div>
-            <div class="invalid-feedback mb-3" id="loginValidation">
-
+            <div class="mb-3" id="validMes">
             </div>
             <button type="submit" class="btn btn-primary">Pay</button>
         </form>
