Fix add user and add validations to register and checkout

--- a/public/register/index.html
+++ b/public/register/index.html
@@ -29,8 +29,7 @@
                 <label for="registerRePassword" class="form-label">Rewrite Password</label>
                 <input type="password" class="form-control" id="registerRePassword" name="rePassword" required>
             </div>
-            <div class="invalid-feedback mb-3" id="loginValidation">
-
+            <div class="mb-3" id="validMes">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
