Add all purchase history for admin

--- a/public/purchaseHistoryPage/index.html
+++ b/public/purchaseHistoryPage/index.html
@@ -39,6 +39,14 @@
         <div id="logged" class="hidden">
             <h2 class="mb-4">Purchase History</h2>
             <form id="searchForm">
+                <div id="AdminShowAllDiv" class="hidden">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="showAll">
+                        <label class="form-check-label" for="showAll">
+                            Show all purchases (Admin only)
+                        </label>
+                    </div>
+                </div>
                 <div class="row my-4 searchForm">
                     <div class="form-group col-12 col-md-7 col-lg-5">
                         <label for="searchFromDate">Date range</label>
